tests/error/impl_wrong_sub/main.adept3

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    actAnything::act(10)
}

trait Act<$T> {
    func act(self $T) void
}

#[public]
impl Act<$T> actAnything {
    func act(self $Self) {
        printf(c"act anything...\n")
    }
}

